# SATTA

./: pyproject.toml  requirements.txt
src/satta/: __init__.py
