[project]
name = "satta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Enriquez", email = "danielen2004@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "numpy>=2.3.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
